--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,11 @@
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>2.13.2</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk14</artifactId>
+            <version>1.46</version>
+        </dependency>
 
 
     </dependencies>
