--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.fiap</groupId>
-    <artifactId>benezinho-viagens</artifactId>
+    <artifactId>psycheck</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>viagem</name>
 
