--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>br.com.fiap</groupId>
     <artifactId>psycheck</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>viagem</name>
+    <name>psycheck</name>
 
 
     <properties>
