feat/fix: relational mapping object fixed and done

--- a/pom.xml
+++ b/pom.xml
@@ -193,7 +193,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <mainClass>br.com.fiap.Main</mainClass>
+                    <mainClass>br.com.psycheck.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
